# LFA

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: ARCHITECTURE.md  MODULES.md  SAFETY.md  SYNTHETIC_DATA.md
examples/: business_partnership_walkthrough_ko.md  poc_synthetic_run.md  synthetic_case_demo.py
lfa/: __init__.py  __main__.py  adversarial.py  breaker.py  hunter.py  reviewer.py  scanner.py  simulator.py  timeline.py  verifier.py  writer.py
lfa/api/: __init__.py
lfa/models/: __init__.py  case.py  persona.py
lfa/simulation/: __init__.py  arena.py  case_generator.py  judge_adjudicator.py  outcome_analyzer.py  persona_loader.py
lfa/templates/: __init__.py
lfa/utils/: __init__.py  date_extractor.py  pdf_parser.py  redactor.py
tests/: test_smoke.py
